[package]
name = "rocket-webapi"
version = "0.1.0"
authors = ["hota822 <hota822@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", feature = ["json"] }
serde = { version = "1.0", feature = ["derive"] }
serde_json = "1.0.0"