[package]
name = "serde"
version = "0.1.0"
authors = ["hota822 <hota822@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_sqlite_pool"]

[global.databases]
sqlite_logs = { url = "/path/to/database.sqlite" }